Prevent errors when unloading Loader

Invalidate the context of the object so that destruction is signaled
and bindings no longer run.

Task-number: QTBUG-47321
Task-number: QTBUG-51995
Task-number: QTBUG-60344
Change-Id: I194a2fefe4e769a58c9ce022d39fe76cbe230de7
Reviewed-by: Michael Brasser <michael.brasser@live.com>